NEWEBODAC-74: Fix datepicker unaligned

--- a/src/main/webapp/css/main.scss
+++ b/src/main/webapp/css/main.scss
@@ -416,7 +416,7 @@ sidebar-collapse {
 /* Forms */
 .input-row {
   padding-top: 2px;
-  padding-bottom: 2px;
+  padding-bottom: 10px;
 
   &.required {
     .col-form-label:after {
